clean: fallback on geocode earth in backend when addok fails

--- a/.env.dist
+++ b/.env.dist
@@ -63,8 +63,8 @@ COOPCYCLE_OAUTH2_PROXY_URI=
 COOPCYCLE_OAUTH2_PROXY_JWT_KEY=ThisKeyIsNotSoSecretChangeIt
 LOCATIONIQ_ACCESS_TOKEN=YourLocationIQAccessToken
 COOPCYCLE_AUTOCOMPLETE_ADAPTER=geocode-earth
-GEOCODE_EARTH_API_KEY=YourGeocodeEarthApiKey
-OPENCAGE_API_KEY=YouOpenCageApiKey
+GEOCODE_EARTH_API_KEY=
+OPENCAGE_API_KEY=
 SONIC_SECRET_PASSWORD=SecretPassword
 SONIC_HOST=sonic
 SONIC_PORT=1491
