--- a/.env.dist
+++ b/.env.dist
@@ -103,6 +103,7 @@ WOOPIT_CLIENT_ID=
 WOOPIT_CLIENT_SECRET=
 WOOPIT_AUTHENTICATION_API_URL=https://connect.recette.gcp.last-mile.fr/api/oauth/token
 WOOPIT_CARRIER_API_URL=https://car-api.recette.gcp.last-mile.fr
+WOOPIT_API_VERSION=1.7.0
 DABBA_ENABLED=0
 DABBA_BASE_URL=https://api.dabba-consigne.fr
 DABBA_CLIENT_ID=
