--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -209,6 +209,8 @@ framework:
                 base_uri: "%env(CUBEJS_API_URL)%/"
             woopit.http_client:
                 base_uri: '%env(WOOPIT_CARRIER_API_URL)%/'
+                headers:
+                    X-Api-Version: '%env(WOOPIT_API_VERSION)%'
             dabba.client:
                 base_uri: "%env(DABBA_BASE_URL)%/"
             umap.client:
