--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -10,6 +10,7 @@ jobs:
     env:
       STRIPE_PUBLISHABLE_KEY: ${{ secrets.STRIPE_PUBLISHABLE_KEY }}
       STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+      GEOCODE_EARTH_API_KEY: ${{ secrets.GEOCODE_EARTH_API_KEY }}
     steps:
       - name: Set timezone
         uses: szenius/set-timezone@v2.0
