link to docs using Symfony forms

--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -311,3 +311,6 @@ services:
 
   AppBundle\Form\BusinessRestaurantGroupPriceType:
     tags: [ form.type ]
+
+  AppBundle\Form\PricingRuleSetType:
+    tags: [ form.type ]
