--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -482,6 +482,8 @@ services:
 
   AppBundle\ExpressionLanguage\PriceRangeExpressionLanguageProvider: ~
 
+  AppBundle\ExpressionLanguage\PricePercentageExpressionLanguageProvider: ~
+
   AppBundle\ExpressionLanguage\PricePerPackageExpressionLanguageProvider: ~
 
   AppBundle\ExpressionLanguage\ExpressionLanguage:
@@ -491,6 +493,7 @@ services:
         - '@coopcycle.expression_language.zone.provider'
         - '@AppBundle\ExpressionLanguage\PickupExpressionLanguageProvider'
         - '@AppBundle\ExpressionLanguage\PriceRangeExpressionLanguageProvider'
+        - '@AppBundle\ExpressionLanguage\PricePercentageExpressionLanguageProvider'
         - '@AppBundle\ExpressionLanguage\PricePerPackageExpressionLanguageProvider'
 
   AppBundle\EventListener\RegistrationListener:
