--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1125,6 +1125,8 @@ services:
 
   AppBundle\MessageHandler\ImportTasksHandler: ~
 
+  AppBundle\MessageHandler\CalculateTaskDistanceHandler: ~
+
   AppBundle\MessageHandler\CalculateRouteHandler:
     arguments:
       $eventBus: '@simple_bus.event_bus'
