--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -76,6 +76,8 @@ services:
   coopcycle.remote_push_notification_manager: '@AppBundle\Service\RemotePushNotificationManager'
   coopcycle.price_formatter: '@AppBundle\Utils\PriceFormatter'
 
+  Doctrine\ORM\Mapping\Driver\AttributeReader: ~
+
   Sylius\Component\Product\Resolver\ProductVariantResolverInterface: '@sylius.product_variant_resolver.default'
   Sylius\Component\Currency\Context\CurrencyContextInterface: '@sylius.context.currency'
   Sylius\Component\Order\Context\CartContextInterface: '@sylius.context.cart.composite'
@@ -102,7 +104,6 @@ services:
   Spatie\GuzzleRateLimiterMiddleware\Store: '@AppBundle\Geocoder\RateLimiterStore'
 
   # Autowiring variables in controllers
-
   Doctrine\Persistence\ObjectRepository $productRepository: '@sylius.repository.product'
   AppBundle\Entity\Sylius\TaxonRepository $taxonRepository: '@sylius.repository.taxon'
   Sylius\Component\Product\Repository\ProductOptionRepositoryInterface $productOptionRepository: '@sylius.repository.product_option'
