--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -1,6 +1,8 @@
 framework:
     validation:
         email_validation_mode: html5
+        enable_annotations: true
+        translation_domain: 'validations'
 
         # Enables validator auto-mapping support.
         # For instance, basic validation constraints will be inferred from Doctrine's metadata.
